Fix contrast

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1138,7 +1138,7 @@ a.carousel-control-prev:hover {
 html {
   font-family: "Roboto", sans-serif;
   background-color: #95cee1;
-  color: rgb(54, 54, 54);
+  color: black;
 }
 
 h1 {
