--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -14,7 +14,7 @@
 html {
   font-family: "Roboto", sans-serif;
   background-color: lighten($secondary-color, 40%);
-  color: rgb(54, 54, 54);
+  color: black;
 }
 
 h1 {
